objects/pepCmsSection__c.object
<CustomObject>
    <fields>
        <fullName>Backup_ID__c</fullName>
        <label>Backup ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Link_1__c</fullName>
        <label>Marketing Linkc 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Link_2__c</fullName>
        <label>Marketing Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <formula>TEXT(pepPage__r.pepPageName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <description>Used when migrating records from Production to Sandboxes. Will be blank in Production, but when inserting these records into Sandbox we insert the Id from Prd into this field. This is our logical key for setting this Record in Lookups in other objects.</description>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Column</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Column</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pepCss_Class__c</fullName>
        <label>Css Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepHeader__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepPage__c</fullName>
        <label>Page</label>
        <referenceTo>pepCmsPage__c</referenceTo>
        <relationshipName>pepSection</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pepRedirect_to_Page__c</fullName>
        <label>Redirect to Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepSectionBodyRich__c</fullName>
        <label>Section Body (Rich)</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>pepSectionBody__c</fullName>
        <label>Section Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pepSectionStoryRich__c</fullName>
        <label>Section Story</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>pepSectionStory__c</fullName>
        <label>Section Story</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pepSectionUniqueName__c</fullName>
        <label>Section Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pepSequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pepType__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Running Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CMS Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>CMS Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>